--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -31,6 +31,7 @@ jobs:
 
   integration_test:
     runs-on: ubuntu-latest
+    needs: npm_security_test
 
     steps:
     - name: Checkout of the repo
