test without name

--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -21,5 +21,4 @@ jobs:
         cache: 'npm'
     - name: Install dependencies
       run: npm install
-    - name: Rub integration tests
-      run: npm test
+    - run: npm test
