--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -21,4 +21,5 @@ jobs:
         cache: 'npm'
     - name: Install dependencies
       run: npm install
-    - run: npm test
+    - name: Rub integration tests
+      run: npm test
