--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -1,42 +1,54 @@
-
-name: Build and Test
+name: Build Test And Deploy
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+  workflow_dispatch:
 
 jobs:
-  npm_security_test:
+  npm_security_tests:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout of the repo
-      uses: actions/checkout@v4
-    - name: Use Node.js 20
-      uses: actions/setup-node@v3
-      with:
-        node-version: 20.x
-        cache: 'npm'
-    - name: Install dependencies
-      run: npm install
-    - name: Rub integration tests
-      run: npm run test-npm-security
+      - name: Checkout of the repo
+        uses: actions/checkout@v4
+      - name: Use Node.js 20
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
+          cache: "npm"
+      - name: Install dependencies
+        run: npm install
+      - name: Run npm security tests
+        run: npm run test-npm-security
 
-  integration_test:
+  integration_tests:
     runs-on: ubuntu-latest
-    needs: npm_security_test
+    needs: npm_security_tests
 
     steps:
-    - name: Checkout of the repo
-      uses: actions/checkout@v4
-    - name: Use Node.js 20
-      uses: actions/setup-node@v3
-      with:
-        node-version: 20.x
-        cache: 'npm'
-    - name: Install dependencies
-      run: npm install
-    - name: Rub integration tests
-      run: npm test
+      - name: Checkout of the repo
+        uses: actions/checkout@v4
+      - name: Use Node.js 20
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
+          cache: "npm"
+      - name: Install dependencies
+        run: npm install
+      - name: Run integration tests
+        run: npm test
+
+  deploy_render:
+    runs-on: ubuntu-latest
+    needs: integration_tests
+
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.MY_RENDER_API_KEY }}
+          wait-for-success: true
