--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -42,6 +42,7 @@ jobs:
         run: npm test
 
   deploy_render:
+    if: github.ref=='refs/heads/main'
     runs-on: ubuntu-latest
     needs: integration_tests
 
